# server-automation

./: .env.example  .gitignore  CLIENT_INTEGRATION_GUIDE.md  DOCUMENTATION.md  README.md  api_commands.md  backfill_published_at.py  backfill_repost_counts.py  backfill_timezone.py  check.py  cookies.txt  db_audit_and_fix.py  fix_db.py  generate_youtube_token.py  llm_calls_report.md  migrate_profiles.py  pyproject.toml  refresh_youtube_token.py  requirements.txt  system_commands.md  test_db.py  test_distribution.py  test_genai.py  verify_youtube_token.py
.agents/workflows/: deploy.md
.cursor/rules/: deploy-workflow.mdc  update-docs.mdc
.github/workflows/: ci.yml  youtube_downloader.yml
app/: config.py  database.py  dependencies.py  logger.py  main.py  middleware.py  timezone.py
app/docs/: schema.py
app/models/: analysis.py  category.py  channel.py  comment_analysis.py  error.py  profile.py  retention_analysis.py  topic_discovery.py  video.py
app/routers/: analysis.py  auth.py  batch_upload.py  categories.py  channels.py  comment_analysis.py  comment_replies.py  content_intelligence.py  discovery.py  errors.py  growth.py  migration.py  observability.py  posting.py  preview_analysis.py  retention_analysis.py  scorecard.py  sync_analysis.py  system.py  thumbnail_analysis.py  ui.py  videos.py
app/services/: analysis_engine.py  auth.py  auto_publisher.py  batch_upload_service.py  comment_analysis_cron.py  comment_analysis_engine.py  comment_reply_cron.py  comment_reply_engine.py  content_intelligence.py  discovery_service.py  downloader.py  error_reporting.py  errors.py  gcs_vertex_staging.py  gemini.py  growth_cron.py  growth_tracking.py  instagram.py  metrics.py  pacing_templates.py  preview_analysis.py  r2.py  retention_analysis.py  schedule_operation.py  scheduler.py  scorecard.py  sync_analysis_cron.py  thumbnail_analysis.py  todo_engine.py  velocity_booster.py  video_service.py  youtube.py  youtube_uploader.py
plans/: automation_server_implementation_plan.md
scratch/: check_errors.py  check_queue_sync.py  check_sync.py  cleanup_duplicates.py  clear_meta_errors.py  find_duplicates.py  inspect_channel.py  migrate_errors.py  migrate_to_queued.py  temp_repair.py  test_mongo.py  test_reach.py
tests/: test_main.py
