[project]
name = "automation-server"
version = "0.1.0"
description = "FastAPI server for content management and automation"
authors = [{ name = "Anjali Garg" }]
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.22.0",
    "motor>=3.2.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "google-auth>=2.22.0",
    "google-api-python-client>=2.95.0",
    "httpx>=0.24.1",
    "python-multipart>=0.0.6",
    "python-dateutil>=2.8.2",
    "psutil>=5.9.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = [
    ".bzr",
    ".direnv",
    ".dots",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

[tool.ruff.lint]
select = ["E", "F", "B", "I", "N", "UP", "PL"]
ignore = [
    "B008", # Do not perform function call `Depends` in argument defaults
    "B904", # Within an `except` clause, raise exceptions with `raise ... from err`
    "B007", # Loop control variable `i` not used within loop body
]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
mypy_path = "stubs"
warn_return_any = true
warn_unused_configs = true
check_untyped_defs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["app.routers.*", "app.services.*"]
disable_error_code = ["attr-defined"]


[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
