[project]
name = "automation-server"
version = "0.1.0"
description = "FastAPI server for content management and automation"
authors = [{ name = "Anjali Garg" }]
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.22.0",
    "motor>=3.2.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "google-auth>=2.22.0",
    "google-api-python-client>=2.95.0",
    "httpx>=0.24.1",
    "python-multipart>=0.0.6",
    "python-dateutil>=2.8.2",
    "psutil>=5.9.0",
]

[tool.ruff]
line-length = 120
target-version = "py310"
exclude = [
    "scratch",
    "tests",
    "db_audit_and_fix.py",
    "migrate_profiles.py",
    "scripts",
    ".bzr",
    ".direnv",
    ".dots",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

[tool.ruff.lint]
select = ["E", "F", "B", "I", "N", "UP", "PL"]
ignore = [
    "B008", # Do not perform function call `Depends` in argument defaults
    "B904", # Within an `except` clause, raise exceptions with `raise ... from err`
    "B007", # Loop control variable `i` not used within loop body
    "PLR0913", # Too many arguments
    "PLR0912", # Too many branches
    "PLR0915", # Too many statements
    "PLR0911", # Too many return statements
    "PLR2004", # Magic value used in comparison
    "PLC0415", # Local imports
    "E501",    # Line too long
    "E402",    # Module level import not at top of file
    "N806",    # Variable in function should be lowercase
    "N803",    # Argument name should be lowercase
    "N802",    # Function name should be lowercase
    "F401",    # Unused import (sometimes needed for type checking)
    "PLW0603", # Using the global statement
]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
mypy_path = "stubs"
warn_return_any = true
warn_unused_configs = true
check_untyped_defs = true
plugins = ["pydantic.mypy"]
exclude = [
    "^scratch/",
    "^tests/",
    "^fix_db\\.py$",
    "^check\\.py$",
    "^test_db\\.py$",
    "^db_audit_and_fix\\.py$",
]


[[tool.mypy.overrides]]
module = ["app.routers.*", "app.services.*"]
disable_error_code = ["attr-defined"]


[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
